# ai-agents-frameworks

./: README.md
.github/: copilot-instructions.md
ag2/: 00_simple_agent.py  01_agent_with_tools.py  02_structured_outputs.py  03_human_in_the_loop.py  04_multi_agent.py  05_sequential_chat.py  06_nested_chat.py  07_code_execution.py  08_guardrails.py  09_mcp_tools.py  10_observability.py  11_a2a.py  11_token_usage.py  OUTPUTS.md  README.md  mcp_server.py  pyproject.toml
agno/: 00_basic_agent.py  01_agent_with_tools.py  02_async_agent.py  03_streaming.py  04_structured_output.py  05_team.py  06_workflow.py  07_human_in_the_loop.py  08_knowledge_rag.py  09_memory.py  10_storage.py  11_guardrails.py  12_reasoning_tools.py  13_session_state.py  14_mcp_tools.py  15_hooks.py  16_usage_metrics.py  OUTPUTS.md  README.md  pyproject.toml
autogen/: 01_tools.py  (+14 more)
langchain/: 00_hello_world.py  01_chat_models.py  02_tools.py  03_streaming.py  04_structured_output.py  05_short_term_memory.py  06_runtime_context.py  07_context_engineering.py  07_middleware.py  08_guardrails.py  08_middleware.py  09_guardrails.py  09_human_in_the_loop.py  10_human_in_the_loop.py  10_long_term_memory.py  11_long_term_memory.py  11_retrieval_rag.py  12_mcp.py  12_retrieval_rag.py  13_mcp.py  13_multi_agent_subagents.py  14_multi_agent_handoffs.py  14_multi_agent_subagents.py  15_context_engineering.py  15_multi_agent_handoffs.py  16_multi_agent_router.py  16_observability.py  17_multi_agent_skills.py  18_observability.py  OUTPUTS.md  README.md  pyproject.toml
langgraph/: 00_hello_world.py  01_state_and_reducers.py  02_pydantic_state.py  03_input_output_schemas.py  04_graph_visualization.py  05_tool_calling.py  06_command_from_tools.py  07_prompt_chaining_and_routing.py  08_streaming.py  09_custom_streaming.py  10_persistence.py  11_message_management.py  12_long_term_memory.py  13_time_travel.py  14_human_in_the_loop.py  15_retry_policies.py  16_map_reduce.py  17_subgraphs.py  18_multi_agent_handoffs.py  19_orchestrator_worker.py  20_evaluator_optimizer.py  21_functional_api.py  22_token_usage.py  OUTPUTS.md  README.md  pyproject.toml
langgraph/res/: agent_graph.mmd
microsoft-agent-framework/: .env.example  00_hello_world.py  01_function_tools.py  02_streaming.py  03_structured_output.py  04_multi_turn_sessions.py  05_built_in_tools.py  06_multimodal.py  07_middleware.py  08_rag.py  09_local_mcp_tools.py  10_tool_approval.py  11_agent_as_tool.py  12_declarative_agents.py  13_background_responses.py  14_multi_agent_orchestration.py  15_workflows_basics.py  16_workflows_agents.py  17_workflows_human_in_the_loop.py  18_workflows_visualization.py  19_token_usage.py  OUTPUTS.md  README.md  pyproject.toml
openai-agents-sdk/: 00_hello_world.py  01_tools_and_metrics.py  02_structured_outputs.py  03_parallelization_in_workflow.py  04_handoffs_and_streaming.py  05_agents_as_tools.py  06_output_guardrails.py  07_llm_as_a_judge.py  08_tracing.py  09_input_guardrails.py  10_human_in_the_loop.py  10_lifecycle_hooks.py  11_context_management.py  11_mcp_tools.py  12_dynamic_instructions.py  12_realtime_agent.py  13_agent_visualization.py  13_sessions.py  14_human_in_the_loop.py  14_voice_agent.py  15_tool_guardrails.py  5_agents_as_tools.py  9_sessions.py  OUTPUTS.md  README.md  conversation_history.db  pyproject.toml
pydantic-ai/: 00_hello_world.py  01_tools_and_metrics.py  02_dependencies.py  03_built_in_tools.py  03_streaming.py  04_structured_outputs.py  05_output_validators.py  06_message_history.py  06_output_functions.py  07_streaming.py  08_message_history.py  08_programmatic_handoff.py  09_agent_delegation.py  09_stateful_graphs.py  10_programmatic_handoff.py  11_toolsets.py  12_mcp_client.py  13_agent_iteration.py  14_stateful_graphs.py  15_graphs_with_genai.py  16_human_in_the_loop.py  17_evals.py  18_a2a.py  19_capabilities.py  20_agent_spec.py  OUTPUTS.md  README.md  pyproject.toml  settings.py
strands-agents-sdk/: .env.example  00_hello_world.py  01_custom_tools.py  02_structured_output.py  03_system_prompt_and_conversation.py  04_model_providers.py  05_agents_as_tools.py  06_streaming_and_callbacks.py  07_metrics_and_observability.py  08_class_based_tools.py  09_hooks.py  10_conversation_management.py  11_multi_agent_swarm.py  12_multi_agent_graph.py  13_multi_agent_workflow.py  14_a2a_agent.py  15_mcp_tools.py  16_skills_plugin.py  OUTPUTS.md  README.md  pyproject.toml  settings.py
study-agents-differences/: .env.example  README.md  REPORT.md  ag2_agent.py  agent-ui.py  agno_agent.py  agno_rag_api_agent.py  benchmark_multi_agent.py  benchmark_runner.py  benchmark_tool_calling.py  claude_sdk_agent.py  crewai_agent.py  crewai_rag_api_agent.py  google_adk_agent.py  langchain_agent.py  langchain_rag_api_agent.py  langgraph_agent.py  langgraph_rag_api_agent.py  llama_index_agent.py  llama_index_fc_agent.py  llama_index_rag_api_agent.py  microsoft_agent.py  openai_agent.py  openai_agents_sdk_agent.py  pydantic_ai_agent.py  pyproject.toml  settings.py  smolagents_agent.py  strands_agent.py  utils.py
study-agents-differences/results/: tool_calling_benchmark_20260406_111150.json  tool_calling_benchmark_20260406_111225.json  tool_calling_benchmark_20260409_151236.json  tool_calling_benchmark_20260409_154601.json  tool_calling_benchmark_20260410_000544.json  tool_calling_benchmark_20260410_000609.json  tool_calling_benchmark_20260410_001222.json  tool_calling_benchmark_20260411_141002.json
(+115 files in other folders)
