[project]
name = "agno-examples"
version = "0.1.0"
description = "Agno framework examples"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.5.0",
    "ddgs",
    "fastapi",
    "lancedb",
    "mcp",
    "openai",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "rich",
    "sqlalchemy",
    "tantivy",
]
