[project]
name = "openai-agents-sdk-examples"
version = "0.1.0"
description = "OpenAI Agents SDK examples"
requires-python = ">=3.10"
dependencies = [
    "openai>=2.0.0",
    "openai-agents[viz]>=0.12.5",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.9.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "aiosqlite>=0.20.0",
    "websockets>=15.0",
]
