[project]
name = "pydantic-ai-examples"
version = "0.1.0"
description = "Pydantic AI framework examples"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.0",
    "pydantic-ai>=1.70.0",
    "pydantic-ai-slim[a2a]>=1.70.0",
    "pydantic-evals>=0.2.0",
    "pydantic-graph>=0.2.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "openai>=1.60.0",
    "uvicorn>=0.30.0",
    "mcp>=1.0.0",
]
